--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 		
 	</head>
 	<body ng-app='todoApp'>
-		
+
+		<todo-list title="aaa">
+			<todo title="1"></todo>
+			<todo title="2"></todo>
+		</todo-list>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
-		<script type="text/javascript" src="js/script.js"></script>
+<!-- 		<script type="text/javascript" src="dist/script.js"></script> -->
+<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
+
